<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/nicebackgr">

        <Button
            android:id="@+id/button_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/getschwifty"
            android:text="@string/btnCharacter"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/button_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/getschwifty"
            android:text="@string/btnLocation"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/button_episode"
            app:layout_constraintEnd_toEndOf="@+id/button_character"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/button_character"
            app:layout_constraintTop_toBottomOf="@+id/button_character" />

        <Button
            android:id="@+id/button_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/getschwifty"
            android:text="@string/btnEpisode"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_location"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/button_location"
            app:layout_constraintTop_toBottomOf="@+id/button_location" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>